// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for compact: false and layout: auto 1`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: false and layout: auto 2`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: false and layout: fixed 1`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  table-layout: fixed;
  min-width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: false and layout: fixed 2`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  table-layout: fixed;
  min-width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: true and layout: auto 1`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  --_a: 8px !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: true and layout: auto 2`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  --_a: 8px !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: true and layout: fixed 1`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  --_a: 8px !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  table-layout: fixed;
  min-width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for compact: true and layout: fixed 2`] = `
":host {
  display: block;
  --_b: var(--p-color-frosted) !important;
  --_c: var(--p-color-contrast-low) !important;
  --_a: 8px !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: var(--p-hyphens, auto) !important;
  color: var(--p-color-primary) !important;
  text-align: start !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  table-layout: fixed;
  min-width: 100%;
  white-space: nowrap;
}"
`;
